--- a/css/index.css
+++ b/css/index.css
@@ -29,6 +29,11 @@
   src: url(../lib/fonts/SequelSans/SequelSansSemiBoldHead.ttf);
 }
 
+@font-face {
+  font-family: 'SS MediumHead';
+  src: url(../lib/fonts/SequelSans/SequelSansMediumHead.ttf);
+}
+
 
 body, h1, p {
   color: white;
@@ -55,6 +60,11 @@ h1 {
 h2 {
   font-family: 'SS SemiBoldHead';
   font-size: 70px;
+}
+
+h3 {
+  font-family: 'SS MediumHead';
+  font-size: 40px;
 }
 
 .center-text {
@@ -134,6 +144,27 @@ h2 {
 #step-architecture:not(.active) {
   opacity: 100;
 }
+
+#step-criteres:not(.active) {
+  opacity: 100;
+}
+
+#step-criteres-4:not(.active) {
+  opacity: 100;
+}
+
+#step-criteres-8:not(.active) {
+  opacity: 100;
+}
+
+#step-criteres-13:not(.active) {
+  opacity: 100;
+}
+
+#step-criteres-14:not(.active) {
+  opacity: 100;
+}
+
 
 
 
