--- a/css/index.css
+++ b/css/index.css
@@ -62,6 +62,26 @@ h2 {
   font-size: 70px;
 }
 
+h4 {
+  font-family: 'SS SemiBoldHead';
+  font-size: 140px;
+  text-align: left;
+}
+
+h5 {
+  font-family: 'SS SemiBoldHead';
+  font-size: 140px;
+  text-align: left;
+}
+
+h6 {
+  font-family: 'SS MediumHead';
+  font-size: 30px;
+  text-align: left;
+  margin-left: 10px;
+  margin-top: 20px;
+}
+
 h3 {
   font-family: 'SS MediumHead';
   font-size: 40px;
@@ -164,6 +184,32 @@ h3 {
 #step-criteres-14:not(.active) {
   opacity: 100;
 }
+
+#step-criteres-16:not(.active) {
+  opacity: 100;
+}
+
+#step-criteres-21:not(.active) {
+  opacity: 100;
+}
+
+#step-terrain-8:not(.active) {
+  opacity: 100;
+}
+
+#step-terrain-11:not(.active) {
+  opacity: 100;
+}
+
+#step-terrain-13:not(.active) {
+  opacity: 100;
+}
+
+#step-terrain-15:not(.active) {
+  opacity: 100;
+}
+
+
 
 
 
