--- a/css/steps.css
+++ b/css/steps.css
@@ -1,7 +1,9 @@
+/*
 #step-title {
   text-align: center;
     
 }
+*/
 
 #step-title h1.title {
   font-size: 110px;
@@ -12,12 +14,26 @@
 }
 
 #step-title p {
-  font-size: 30px;
-  margin-top: 30px;
-  color: rgba(0, 0, 0, 0.5);
+  font-size: 20px;    
+    text-align: left;
+}
+
+#step-title h4 {
+  margin-bottom: 0px;
+  margin-top: 0px;
+  display: inline;
+}
+
+#step-title h5 {
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 #step-intro-5 p, h2 {
+  display: inline;
+}
+
+#step-intro-9 h1 {
   display: inline;
 }
 
@@ -36,6 +52,23 @@
 #step-criteres-6 h1, h2 {
   display: inline;
 }
+
+#step-criteres-1 h1, h2 {
+  display: inline;
+}
+
+#step-terrain h1 {
+  display: inline;
+}
+
+#step-terrain-6 h3 {
+  display: inline;
+}
+
+#step-terrain-16 h3, h2 {
+  display: inline;
+}
+
 
 .step.sim.foundation {
   background-color: white;
